# Nubox007.github.io

./: CMakeLists.txt  README.md  _config.yml  main.cpp
AlgorithmStudy/: Algoritm_Study.sln  Algoritm_Study.vcxproj  Algoritm_Study.vcxproj.filters
AlgorithmStudy/Algoritm_Study/x64/Debug/: Algoritm_Study.exe.recipe  Algoritm_Study.ilk  main.obj.enc  vc143.idb
AlgorithmStudy/Algoritm_Study/x64/Debug/Algoritm_Study.tlog/: Algoritm_Study.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
AlgorithmStudy/BakJoon/: Bkj1094.cpp
CmakeProject/: CMakeLists.txt  main.cpp
RustCode/stick/src/: main.rs
TEST/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
TEST/ConsoleApplication1/ConsoleA.e1f5556b/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  vc143.idb
_posts/: 2016-08-30-example-post-four.md  2025-10-20-welcome-to-jekyll.markdown
백준/Bronze/1152. 단어의 개수/: README.md  단어의 개수.cc
백준/Bronze/1292. 쉽게 푸는 문제/: README.md  쉽게 푸는 문제.cc
백준/Gold/1456. 거의 소수/: README.md  거의 소수.cc
백준/Silver/1051. 숫자 정사각형/: README.md  숫자 정사각형.cc
백준/Silver/1138. 한 줄로 서기/: README.md  한 줄로 서기.cc
백준/Silver/11727. 2×n 타일링 2/: 2×n 타일링 2.cc  README.md
백준/Silver/1182. 부분수열의 합/: README.md  부분수열의 합.cc
백준/Silver/1189. 컴백홈/: README.md  컴백홈.cc
백준/Silver/1260. DFS와 BFS/: DFS와 BFS.cc  README.md
백준/Silver/14534. String Permutation/: README.md  String Permutation.cc
백준/Silver/2870. 수학숙제/: README.md  수학숙제.cc
(+9 files in other folders)
